Add Libreoffice library

--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -16,6 +16,17 @@ ENV DRUSH_LAUNCHER_VER="0.6.0" \
 
 USER root
 
+RUN set -xe; \
+    echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories; \
+    echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories; \
+    apk add --no-cache --purge -uU \
+        curl icu-libs unzip zlib-dev musl \
+        mesa-gl mesa-dri-swrast \
+        libreoffice libreoffice-base libreoffice-lang-uk \
+        ttf-freefont ttf-opensans ttf-font-awesome ttf-ubuntu-font-family ttf-inconsolata \
+        libstdc++ dbus-x11; \
+    rm -rf /var/cache/apk/* /tmp/*
+
 RUN set -ex; \
     \
     su-exec wodby composer global require drush/drush:^8.0; \
