Fix dependencies for Libreoffice library

--- a/7/Dockerfile
+++ b/7/Dockerfile
@@ -15,7 +15,9 @@ RUN set -xe; \
     echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories; \
     echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories; \
     apk add --no-cache --purge -uU \
-        curl icu-libs unzip zlib-dev musl libcrypto1.1  \
+        curl icu-libs unzip zlib-dev musl \
+        # 1.2.25-r5 version has some issue during install. Use version that compatible with alpine 3.8.
+        'xmlsec<1.2.25-r3' \
         mesa-gl mesa-dri-swrast \
         libreoffice libreoffice-base libreoffice-lang-uk \
         ttf-freefont ttf-opensans ttf-font-awesome ttf-ubuntu-font-family ttf-inconsolata \
