Fix issue with user configuration directory

--- a/7/Dockerfile
+++ b/7/Dockerfile
@@ -17,6 +17,9 @@ RUN set -ex; \
 #        ttf-font-awesome \
         ttf-freefont ttf-opensans ttf-ubuntu-font-family ttf-inconsolata; \
     rm -rf /var/cache/apk/* /tmp/*; \
+    mkdir /home/www-data/.config; \
+    chmod 700 /home/www-data/.config; \
+    chown www-data /home/www-data/.config; \
     \
     su-exec wodby composer global require drush/drush:^8.0; \
     \
